Add initial layout

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My webpage</title>
+	<link rel="stylesheet" href="css/main.css">
+    <title>Weather Display</title>
 </head>
 <body>
-    <h1 style="position: relative; left: 50%">Hello World!!</h1>
+    <main>
+        <h1>Weather Forecast</h1>
+        <section>
+            <h1>Location</h1>
+        </section>
+        <section>
+            <h1>Today's weather is going to be</h1>
+        </section>
+        <section>
+            <h1>This week's weather is going to be</h1>
+        </section>
+    </main>
 </body>
 </html>
